[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/Scenes/MenuPages.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/Scenes/Labels/SmallLabelItalic.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/Scenes/PageControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/UI/Scripts/Logbook.gd" type="Script" id=4]

[node name="Logbook" instance=ExtResource( 1 )]
script = ExtResource( 4 )
pages = [ [ "20th November 1740", "After four days the storm finally fades and we can take a rest. But we only have little food left and our ship is in a bad shape. The navigational instruments and sea charts are lost.
We have to come ashore soon. One of my jacks saw some birds hunting for fish, so land can't be far. Fortunately we always have some tools and boards onboard, so we can build some basic shelter.

Task:
Find land and build a port. (well, if you could)" ], [ "22nd November 1740", "The port is built and a new hope arises. I am still worried about the next days... we are running out of food and lack basic building material.
We need to secure our basic needs to keep us alive.
It is time to send people gathering food and lumber so that we can survive and build some shelter.

Task:
Build at least one of each:
* Lumberjack
* Fisher
* Hunter
Collect 5 food and 5 boards." ] ]

[node name="Body" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage" index="2" instance=ExtResource( 2 )]
margin_top = 50.0
margin_right = 300.0
margin_bottom = 267.0
size_flags_horizontal = 1
text = "After four days the storm finally fades and we can take a rest. But we only have little food left and our ship is in a bad shape. The navigational instruments and sea charts are lost.
We have to come ashore soon. One of my jacks saw some birds hunting for fish, so land can't be far. Fortunately we always have some tools and boards onboard, so we can build some basic shelter.

Task:
Find land and build a port. (well, if you could)"
autowrap = true

[node name="PageControl" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage" index="3" instance=ExtResource( 3 )]

[node name="PrevButton" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage/PageControl" index="0"]
disabled = true
[connection signal="pressed" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage/PageControl/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage/PageControl/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/RightPage/HBoxContainer/OKButton" to="." method="_on_OKButton_pressed"]

[editable path="CenterContainer/TextureRect/MarginContainer/HBoxContainer/LeftPage/PageControl"]

[editable path="CenterContainer/TextureRect/MarginContainer/HBoxContainer/RightPage"]
